Fixed Scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -12,20 +12,7 @@ a
     color: inherit;
 }
 
-::-webkit-scrollbar
-{
-    width: 10px;
-}
 
-::-webkit-scrollbar-thumb
-{
-    background-color: #ffffff3a;
-}
-
-::-webkit-scrollbar-track
-{
-    background-color: #10101a;
-}
 
 body
 {
@@ -35,7 +22,21 @@ body
     width: 100%;
     height: 100%;
     -webkit-tap-highlight-color: transparent;
-    
+}
+
+body::-webkit-scrollbar
+{
+    width: 10px;
+}
+
+body::-webkit-scrollbar-thumb
+{
+    background-color: #ffffff3a;
+}
+
+body::-webkit-scrollbar-track
+{
+    background-color: #10101a;
 }
 
 
